Upgrade HttpEasy